# lib/api-spec/openapi.yaml
@@ -57,8 +57,8 @@ paths:
           schema:
             type: number
             minimum: 1
-            maximum: 48
-            default: 12
+            maximum: 50
+            default: 50
       responses:
         "200":
           description: Published posts
